Cyberduck
FTP, SFTP, WebDAV & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

3.0.2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0.2]
- [Localize] Arabic Localization
- [Localize] Greek Localization
- [Feature] Added transcript (S3)
- [Feature] Added transcript (WebDAV)
- [Bugfix] Moving or copying files to another bucket fails (S3) [#2157]
- [Bugfix] Folders collapse in outline view when refreshing [#2033]
- [Bugfix] Cannot connect with empty password [#2109]
- [Bugfix] Saving when editor exits does not upload edited file [#2120]
- [Bugfix] Updated Growl.framework

3.0.1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0.1]
- [Feature] Added Taco HTML Edit to the list of supported editors (http://tacosw.com/htmledit/beta.php) [#188]
- [Bugfix] Cannot connect to servers with unknown host key [#2044]
- [Bugfix] Cannot edit filename in Info panel [#2049]
- [Bugfix] External editor failures [#2041, #2039, #2052, #2058]
- [Bugfix] Missing resume option in transfer prompt
- [Bugfix] Removed keep connection active feature. [#2057]

3.0 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Support for file renaming and copying (Amazon S3)
- [Feature] Support for copying files (WebDAV)
- [Bugfix] Transfers larger than 2GB fail (SFTP) [#1235]

3.0b3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Activity Window [#1250]

3.0b2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Localize] Latvian Localization
- [Feature] Quick Look files in browser [#1580]
- [Feature] Set corresponding Web URL in bookmark. Open in browser toolbar button [#1098]
- [Bugfix] APPE command broken (FTP) [#1915]

3.0b1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Amazon Simple Storage Service (S3) protocol support (http://aws.amazon.com/s3) [#1725]
- [Feature] WebDAV protocol support [#464]
- [Feature] Search bookmarks [#916]