@@ -25,25 +25,31 @@ p.note {
     <div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0.2">
-		3.0.2</a></strong> <em></em> (Build $Revision$)<br />
+		3.0.2</a></strong> (Build $Revision$)<br />
 
 		<ul>
-<li>[Localize] Arabic Localization</li>
 <li>[Localize] Greek Localization</li>
 <li>[Feature] Added transcript (S3)</li>
 <li>[Feature] Added transcript (WebDAV)</li>
+<li>[Feature] Display bookmark view for new browser window [<a href="http://trac.cyberduck.ch/ticket/2252">#2252</a>]</li>
+<li>[Feature] Option in context menu to open folder in new browser [<a href="http://trac.cyberduck.ch/ticket/2036">#2036</a>]</li>
+<li>[Feature] Cannot select private key in login prompt (SSH) [<a href="http://trac.cyberduck.ch/ticket/2221">#2221</a>]</li>
+<li>[Feature] Authentication with both password and public key (SSH) [<a href="http://trac.cyberduck.ch/ticket/2203">#2203</a>]</li>
 <li>[Bugfix] Moving or copying files to another bucket fails (S3) [<a href="http://trac.cyberduck.ch/ticket/2157">#2157</a>]</li>
 <li>[Bugfix] Folders collapse in outline view when refreshing [<a href="http://trac.cyberduck.ch/ticket/2033">#2033</a>]</li>
 <li>[Bugfix] Cannot connect with empty password [<a href="http://trac.cyberduck.ch/ticket/2109">#2109</a>]</li>
 <li>[Bugfix] Saving when editor exits does not upload edited file [<a href="http://trac.cyberduck.ch/ticket/2120">#2120</a>]</li>
-<li>[Bugfix] Update Growl.framework</li>
+<li>[Bugfix] Wrong selection with search filter in Transfer window [<a href="http://trac.cyberduck.ch/ticket/2336">#2336</a>]</li>
+<li>[Bugfix] Stop button does not work during countdown to retry transfer [<a href="http://trac.cyberduck.ch/ticket/2121">#2121</a>]</li>
+<li>[Bugfix] Transfers fail using AppleScript (SFTP) [<a href="http://trac.cyberduck.ch/ticket/2244">#2244</a>]</li>
+<li>[Bugfix] Update Growl.framework to 1.1.4</li>
         </ul>
     </div>
 
     <div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0.1">
-		3.0.1</a></strong> <em></em> (Build 3999)<br />
+		3.0.1</a></strong> (Build 3999)<br />
 
 		<ul>
 <li>[Feature] Added Taco HTML Edit to the list of supported editors (<a href="http://tacosw.com/htmledit/beta.php">http://tacosw.com/htmledit/beta.php</a>) [<a href="http://trac.cyberduck.ch/ticket/188">#188</a>]</li>
@@ -62,7 +68,7 @@ p.note {
     <div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
-		3.0</a></strong> <em></em> (Build 3966)<br />
+		3.0</a></strong> (Build 3966)<br />
 
 		<ul>
 <li>[Feature] Support for file renaming and copying (Amazon S3)</li>
@@ -74,7 +80,7 @@ p.note {
 	<div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
-		3.0b3</a></strong> <em></em> (Build 3901)<br />
+		3.0b3</a></strong> (Build 3901)<br />
 
 		<ul>
 <li>[Feature] Activity Window [<a href="http://trac.cyberduck.ch/ticket/">#1250</a>]</li>
@@ -84,7 +90,7 @@ p.note {
 	<div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
-		3.0b2</a></strong> <em></em> (Build 3793)<br />
+		3.0b2</a></strong> (Build 3793)<br />
 
 		<ul>
 <li>[Localize] Latvian Localization</li>
@@ -97,7 +103,7 @@ p.note {
 	<div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
-		3.0b1</a></strong> <em></em> (Build 3709)<br />
+		3.0b1</a></strong> (Build 3709)<br />
 
 		<ul>
 <li>[Feature] Amazon Simple Storage Service (S3) support (<a href="http://aws.amazon.com/s3">http://aws.amazon.com/s3</a>) [<a href="http://trac.cyberduck.ch/ticket/1725">#1725</a>]</li>
